<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.uwb.mobiuwb.MainActivity">

    <item
        android:id="@+id/action_bar_refresh"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:title=""/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/action_contact"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>
